@@ -248,6 +248,11 @@ function draw_edit_control($field_name, &$field_array) {
 			((isset($field_array["form_id"])) ? $field_array["form_id"] : ""));
 
 		break;
+	case 'file':
+		form_file($field_name, 
+			((isset($field_array["size"])) ? $field_array["size"] : "40"));
+
+		break;
 	default:
 		print "<em>" . htmlspecialchars($field_array["value"],ENT_QUOTES) . "</em>";
 
@@ -255,6 +260,23 @@ function draw_edit_control($field_name, &$field_array) {
 
 		break;
 	}
+}
+
+/* form_file - draws a standard html file input element
+   @arg $form_name - the name of this form element
+   @arg $form_size - the size (width) of the textbox */
+function form_file($form_name, $form_size = 30) {
+
+	print "<input type='file'";
+
+	if (isset($_SESSION["sess_error_fields"])) {
+		if (!empty($_SESSION["sess_error_fields"][$form_name])) {
+			print "class='txtErrorTextBox'";
+			unset($_SESSION["sess_error_fields"][$form_name]);
+		}
+	}
+
+	print " id='$form_name' name='$form_name' size='$form_size'>";
 }
 
 /* form_filepath_box - draws a standard html textbox and provides status of a files existence
